2005-10-15  Stephen Deasey  <sdeasey@users.sf.net>

	* Makefile:
	* acinclude.m4:
	* m4/dns.m4: Drop acinclude.m4 and move dns checking macros into
	own file in m4 directory.
	* configure.in:
	* nsd/dns.c: Use built-in AC_CHECK_MEMBERS macro.

2005-10-15  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/tclfile.c (UnspliceChannel): disable any potential
	ready-to-fire events in the threads event queue which 
	reference to-be-unspliced channel.
	Reformatted, untabified, beautified, commented, ...ed :-)

	* acinclude.m4: removed m4 checking for structure members

	* configure.in: added checking for sin_len in sockaddr_in

	* nsd/dns.c: added checking for HAVE_MTSAFE_DNS and add 
	protective locks if not (Darwin).
	Added checking for HAVE_SOCKADDRIN_SIN_LEN because Darwin
	version of getnameinfo fails if sin_len has unsane values.
	Fixed bug while processing results of gethostbyname.

	* include/nsthread.h: added definition of MIN/MAX macros
	since Solaris does not define them in usual place (sys/param.h)

2005-10-11  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/nsmain.c (StartWatchedServer): clear signal handlers
	before re-starting the server.

2005-10-10  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/adprequest.c Removed OS/FS fallbacks. Now use TclVFS 
	* nsd/adpeval.c    wrappers always. This simplifies code
	* nsd/fastpath.c   and (hopefully) does not introduce any
	* nsd/urlopen.c    (perceivable) speed penalties.

2005-10-09  Stephen Deasey  <sdeasey@users.sf.net>

	* Makefile:
	* autogen.sh: New script to run the various autotools to generate
	the build system.
	* missing: Add this default automake helper script.
	* configure.in: Initialise automake, even though we don't use it,
	so that we can use aclocal to manage our m4 scripts.
	* aclocal.m4:
	* acinclude.m4: Contents of aclocal.m4 now moved to acinclude.m4.
	aclocal.m4 is now autogenerated by the aclocal tool, called from
	within autogen.
	* configure: